Fix footer overlap and Certificates page packground color

--- a/src/components/certificates/Certificates.scss
+++ b/src/components/certificates/Certificates.scss
@@ -85,6 +85,7 @@
     }
 
     &--ngo {
+      background-color: white;
       display: flex;
       @include min-breakpoint(1200px){
         justify-content: center;
@@ -113,7 +114,7 @@
 
     &--picture{
       position: relative;
-      height: 100vh;
+      height: 400px;
       min-height: auto;
       overflow: hidden;
       &:after{
@@ -125,7 +126,7 @@
         top: 5px;
       }
       @include min-breakpoint(700px){
-        height: 80vh;
+        height: 60vh;
       }
       @include min-breakpoint(1200px){
         min-height: auto;
